# RustBill

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  user.md  vitest.config.ts
rustbill/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
rustbill/config/: default.toml  development.toml  production.toml
rustbill/crates/rustbill-core/: Cargo.toml
rustbill/crates/rustbill-core/src/: config.rs  error.rs  lib.rs
rustbill/crates/rustbill-core/src/analytics/: mod.rs  repository.rs  sales_ledger.rs  schema.rs  service.rs
rustbill/crates/rustbill-core/src/auth/: api_key.rs  keycloak.rs  mod.rs  password.rs  repository.rs  schema.rs  service.rs  session.rs
rustbill/crates/rustbill-core/src/billing/: auto_charge.rs  checkout.rs  coupons.rs  credit_notes.rs  credits.rs  dunning.rs  invoice_pdf.rs  invoices.rs  lifecycle.rs  mod.rs  payment_methods.rs  payments.rs  plan_change.rs  plans.rs  proration.rs  refunds.rs  subscriptions.rs  tax.rs  tiered_pricing.rs  usage.rs
rustbill/crates/rustbill-core/src/billing/auto_charge/: mod.rs  repository.rs  schema.rs  service.rs
rustbill/crates/rustbill-core/src/billing/checkout/: mod.rs  repository.rs  schema.rs  service.rs
rustbill/crates/rustbill-core/src/billing/coupons/: mod.rs  repository.rs  schema.rs  service.rs
rustbill/crates/rustbill-core/src/billing/credit_notes/: mod.rs  repository.rs  schema.rs  service.rs
rustbill/crates/rustbill-core/src/billing/credits/: mod.rs  repository.rs  schema.rs  service.rs
rustbill/crates/rustbill-core/src/billing/dunning/: mod.rs  repository.rs  schema.rs  service.rs
rustbill/crates/rustbill-core/src/billing/invoice_pdf/: mod.rs  (+3 more)
rustbill/crates/rustbill-core/src/customers/: mod.rs  repository.rs  schema.rs  service.rs  validation.rs
rustbill/crates/rustbill-core/src/db/: models.rs  pool.rs
rustbill/crates/rustbill-core/src/deals/: mod.rs  repository.rs  schema.rs  service.rs  validation.rs
rustbill/crates/rustbill-core/src/licenses/: mod.rs  repository.rs  schema.rs  service.rs  signing.rs  validation.rs
rustbill/crates/rustbill-core/src/notifications/: email.rs  events.rs  mod.rs  repository.rs  schema.rs  send.rs  service.rs  templates.rs
rustbill/crates/rustbill-core/src/payments/: lemonsqueezy.rs  mod.rs  repository.rs  schema.rs  service.rs  stripe.rs  xendit.rs
rustbill/crates/rustbill-core/src/products/: mod.rs  repository.rs  schema.rs  service.rs  validation.rs
rustbill/crates/rustbill-core/src/scheduler/: cron.rs  mod.rs  repository.rs  schema.rs  service.rs
rustbill/crates/rustbill-core/src/search/: mod.rs  repository.rs  schema.rs  service.rs
rustbill/crates/rustbill-core/src/settings/: mod.rs  provider_settings.rs  repository.rs  schema.rs  service.rs
rustbill/crates/rustbill-server/: Cargo.toml
rustbill/crates/rustbill-server/src/: app.rs  lib.rs  main.rs
rustbill/crates/rustbill-server/src/extractors/: admin_user.rs  auth_user.rs  mod.rs  validated_json.rs
rustbill/crates/rustbill-server/src/middleware/: api_key_auth.rs  cron_auth.rs  mod.rs  session_auth.rs
rustbill/crates/rustbill-server/src/routes/: analytics.rs  api_keys.rs  auth.rs  customers.rs  deals.rs  licenses.rs  mod.rs  products.rs  search.rs  settings.rs
rustbill/crates/rustbill-server/tests/: analytics.rs  api_keys.rs  auth.rs  billing_pipeline.rs  checkout.rs  coupons.rs  credit_notes.rs  credits.rs  customers.rs  deals.rs  dunning.rs  events_plans_dunning_webhooks_admin.rs  invoices.rs  licenses.rs  one_time_sales.rs  payment_methods.rs  payments.rs  plan_change.rs  products.rs  refunds.rs  search_settings_admin.rs  subscriptions.rs  tax_rules.rs  usage.rs  v1_api.rs  webhooks.rs
rustbill/crates/rustbill-server/tests/common/: mod.rs
rustbill/docs/: .gitignore  next.config.mjs  package.json
rustbill/docs/.github/workflows/: deploy-docs.yml
rustbill/docs/app/: config.ts  custom.css  layout.tsx  not-found.tsx
rustbill/docs/app/[[...mdxPath]]/: page.tsx
rustbill/docs/content/: _meta.ts  index.mdx
rustbill/docs/content/api-reference/: _meta.ts  customers.mdx  index.mdx  invoices.mdx  licenses.mdx  payments.mdx  products.mdx  subscriptions.mdx  webhooks.mdx
rustbill/docs/content/architecture/: _meta.ts  authentication.mdx  database-schema.mdx  index.mdx
rustbill/docs/content/getting-started/: _meta.ts  configuration.mdx  index.mdx  quick-start.mdx
rustbill/docs/content/guides/: _meta.ts  deployment.mdx  license-management.mdx  payment-providers.mdx  webhook-integration.mdx
rustbill/docs/content/reference/: _meta.ts  database-enums.mdx  environment-variables.mdx  error-codes.mdx
rustbill/docs/public/: site.webmanifest
rustbill/installer/: Cargo.toml
rustbill/installer/src/: app.rs  main.rs  theme.rs
rustbill/installer/src/installer/: backend.rs  config.rs  database.rs  deps.rs  executor.rs  frontend.rs  mod.rs  preflight.rs  services.rs  verify.rs
rustbill/installer/src/ui/: mod.rs
rustbill/installer/src/ui/screens/: complete.rs  config.rs  error.rs  mod.rs  mode_select.rs  preflight.rs  progress.rs  verify.rs  welcome.rs
rustbill/installer/src/ui/widgets/: checklist.rs  log_viewer.rs  mod.rs  phase_progress.rs  status_bar.rs
rustbill/migrations/: 20260316000000_init.sql  20260317000000_billing_engine.sql  20260318010000_api_keys_customer_scope.sql  20260319100000_sales_events_ledger.sql  20260319113000_sales_events_partitioning.sql  20260319120000_sales_events_partition_maintenance.sql
(+410 files in other folders)
