[workspace]
resolver = "2"
members = [
    "crates/rustbill-core",
    "crates/rustbill-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "request-id", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
rust_decimal = { version = "1", features = ["serde-str"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Cryptography
argon2 = "0.5"
bcrypt = "0.16"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# PDF
printpdf = "0.7"

# Scheduling
tokio-cron-scheduler = "0.13"

# Payment providers
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper-rustls"] }

# Rate limiting
governor = "0.8"

# Testing
axum-test = "19"
cookie = "0.18"

# Internal crates
rustbill-core = { path = "crates/rustbill-core" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
