[package]
name = "rustbill-installer"
version = "0.1.0"
edition = "2021"
description = "TUI installer for RustBill billing platform"
license = "MIT"

[[bin]]
name = "rustbill-installer"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Async / threading
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP (for downloading release artifacts)
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# Hashing (checksum verification)
sha2 = "0.10"

# System info
sysinfo = "0.32"
nix = { version = "0.29", features = ["user", "fs"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
chrono = "0.4"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
