[package]
name = "rustbill-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Validation
validator = { workspace = true }

# Cryptography
argon2 = { workspace = true }
bcrypt = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
subtle = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
urlencoding = "2"
config = "0.14"

# HTTP client (for payment providers + webhooks)
reqwest = { workspace = true }

# Email
lettre = { workspace = true }

# PDF
printpdf = { workspace = true }

# Scheduling
tokio-cron-scheduler = { workspace = true }

# Payment providers (feature-gated)
async-stripe = { workspace = true, optional = true }

[features]
default = ["stripe", "xendit", "lemonsqueezy"]
stripe = ["dep:async-stripe"]
xendit = []
lemonsqueezy = []
